test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-delete-source/1-0-existing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-delete-source-existing-ns
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: foreach-cpol-clone-list-sync-delete-source-existing-ns
type: Opaque
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "false"
    location: europe
  name: mysecret-2
  namespace: foreach-cpol-clone-list-sync-delete-source-existing-ns
type: Opaque
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-delete-source-target-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-delete-source-target-ns-2
