test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-delete-source/2-1-trigger.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-cpol-clone-list-sync-delete-source-trigger-ns
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: default-deny
  namespace: foreach-cpol-clone-list-sync-delete-source-trigger-ns
data:
  namespaces: foreach-cpol-clone-list-sync-delete-source-target-ns-1,foreach-cpol-clone-list-sync-delete-source-target-ns-2
