test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-delete-source/3-2-target-none-expected.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-2
  namespace: foreach-cpol-clone-list-sync-delete-source-target-ns-2
type: Opaque
