test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-list-sync-delete-source/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-list-sync-delete-source
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: 1-0-existing.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: 1-1-policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: foreach-cpol-clone-list-sync-delete-source
  - name: step-02
    try:
    - apply:
        file: 2-1-trigger.yaml
  - name: step-03
    try:
    - assert:
        file: 3-1-target-expected.yaml
    - error:
        file: 3-2-target-none-expected.yaml
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: mysecret-1
          namespace: foreach-cpol-clone-list-sync-delete-source-existing-ns
  - name: step-05
    try:
    - error:
        file: 3-1-target-expected.yaml
